# signalk-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  history.py  pyproject.toml  signalk-history-10.36.10.21-20260527T191613Z.feather
.github/workflows/: pypi-publish.yml  python-package.yml
signalk/: __main__.py
signalk/history/: __init__.py  __main__.py  history_api.py  output.py
signalk_cli/: __init__.py  __main__.py  cli.py  history_api.py  output.py
signalk_cli/history/: __init__.py  __main__.py  cli.py  output.py
src/signalk_cli/: __init__.py  __main__.py
src/signalk_cli/history/: __init__.py  cli.py  history_api.py  output.py
tests/: conftest.py  test_cli.py  test_history_api.py  test_output.py
