[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalk-cli"
version = "0.1.0"
description = "Query the SignalK v2 History API and export data as CSV or Apache Arrow Feather"
readme = "README.md"
requires-python = ">=3.13"
license="Apache-2.0"
authors = [
    { name = "jey burrows", email = "jrb@rhizomatics.org.uk" }
]

keywords = ["signalk", "sailing", "marine", "nmea","boating"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

dependencies = [
    "click>=8.0",
    "niquests>=2.28",
    "pyarrow>=17.0",
]

[project.urls]
Homepage = "https://github.com/rhizomatics/signalk-cli"
Repository = "https://github.com/rhizomatics/signalk-cli"

[project.scripts]
signalk-history = "signalk.history.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["signalk"]

[tool.uv]
package = false
