[project]
name = "signalk-cli"
version = "0.1.0"
description = "Query the SignalK v2 History API and export data as CSV or Apache Arrow Feather"
readme = "README.md"
requires-python = ">=3.13"
license="Apache-2.0"
authors = [
    { name = "jey burrows", email = "jrb@rhizomatics.org.uk" }
]

keywords = ["signalk", "sailing", "marine", "nmea","boating"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

dependencies = [
    "click>=8.0",
    "niquests>=2.28",
    "pyarrow>=17.0",
]
[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pre-commit>=4.4.0",
    "pytest>=9.0.0",
    "pytest-mock>=3.15.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx",
    "pytest-xdist",
    "pytest-mqtt>=0.6.0",
    "pytest-subprocess>=1.5.3",
    "coverage",
    "icdiff",
    "actionlint-py",
    "codespell"
]

[project.urls]
Homepage = "https://github.com/rhizomatics/signalk-cli"
Repository = "https://github.com/rhizomatics/signalk-cli"

[project.scripts]
history = "signalk_cli.history:cli"


[tool.uv]
compile-bytecode = true
managed = true
exclude-newer = "5 days"
add-bounds = "major"

[build-system]
requires = ["uv_build>=0.9.18"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "signalk_cli"
