[project]
name = "signalk-cli"
version = "1.0.0"
description = "Query the SignalK v2 History API and export data as CSV or Apache Arrow Feather"
readme = "README.md"
requires-python = ">=3.13"
license="Apache-2.0"
authors = [
    { name = "jey burrows", email = "jrb@rhizomatics.org.uk" }
]

keywords = ["signalk", "sailing", "marine", "nmea","boating"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

dependencies = [
    "click>=8.3.3",
    "niquests>=2.28",
    "pyarrow>=17.0",
    "zeroconf>=0.149.16,<0.150.0",
]
[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pre-commit>=4.4.0",
    "pytest>=9.0.0",
    "pytest-mock>=3.15.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist",
    "coverage",
    "icdiff",
    "codespell"
]

[project.urls]
Homepage = "https://github.com/rhizomatics/signalk-cli"
Repository = "https://github.com/rhizomatics/signalk-cli"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
norecursedirs = [
    ".git"
]


[tool.coverage.run]
branch = true
source = ["src"]

[tool.mypy]
mypy_path=["./src"]

[tool.uv]
compile-bytecode = true
managed = true
exclude-newer = "5 days"
add-bounds = "major"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-root = "src"
module-name = "signalk_cli"

[project.scripts]
myproj = "signalk_cli.history:cli"
